--- a/skelton/catalog-info.yaml
+++ b/skelton/catalog-info.yaml
@@ -2,6 +2,8 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: ${{values.team_name}}
+  annotations:
+    backstage.io/techdocs-ref: dir:.
 spec:
   type: service
   lifecycle: experimental
