--- a/skelton/catalog-info.yaml
+++ b/skelton/catalog-info.yaml
@@ -2,6 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: ${{values.team_name}}
+  description: ${{values.description}}
 spec:
   type: service
   lifecycle: experimental
