--- a/template.yaml
+++ b/template.yaml
@@ -22,7 +22,7 @@ spec:
         team_name:
           title: Team Name
           type: string
-          description: Chofer/DevEx Team Name
+          description: Chofer/DevEx Team Name, Note* :Team Name should be a single word with no spaces.
           ui:autofocus: true
           pattern: "^[^\\s]+$"
           errorMessage: "Team Name should be a single word with no spaces."
